--- a/client/src/css/AddCategoryModal.css
+++ b/client/src/css/AddCategoryModal.css
@@ -1,4 +1,4 @@
-.addCategoryModalSection{
+.add-category-modal-section{
   width:100%;
   height:100%;
   background-color: #fff;
@@ -8,18 +8,19 @@
   left:0;
 }
 
-.addCategoryModalContainer{
+.add-category-modal-container{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.addCategoryModalText{
-  font-size:28px;
+.add-category-modal-text{
+  letter-spacing: 1px;
+  font-size:24px;
   margin-bottom:30px;
 }
 
-.addCategoryModalInput{
+.add-category-modal-input{
   width:260px;
   height:50px;
   border:3px solid #037334;
@@ -30,13 +31,18 @@
   margin:10px 0 40px 0;
 }
 
-.addCategoryModalBtn{
+.add-category-modal-btn{
   cursor: pointer;
-  font-size:16px;
+  font-size:14px;
   width:60px;
   height:40px;
   border-radius:12px;
   border:3px solid #037334;
   background-color: #037334;
   color:#fff;
+  transition: all .2s ease-in-out;
+}
+
+.add-category-modal-btn:hover{
+  transform: scale(0.95);
 }
