--- a/client/src/css/Landing.css
+++ b/client/src/css/Landing.css
@@ -26,6 +26,7 @@ a:-webkit-any-link {
   margin:40px 0;
   letter-spacing: 1.5rem;
   font-weight: 500;
+  -webkit-text-stroke: 2px #000
 }
 
 .landing-title span{
